--- a/app/style.sass
+++ b/app/style.sass
@@ -1,8 +1,21 @@
+body
+    margin: 0
+    padding: 0
 .container
     background-color: lightcyan
     height: 100vh
-list
-    background-color: white  
+
 .flex
     display: flex
-    flex-wrap: wrap      
+    flex-wrap: wrap    
+    justify-content: space-between
+
+ul
+    margin-top: 10px  
+    padding: 0
+    list-style-type: none   
+
+list div
+    background-color: white 
+show div
+    background-color: white      
