--- a/app/style.css
+++ b/app/style.css
@@ -3,23 +3,39 @@ body {
   padding: 0; }
 
 .container {
-  background-color: lightcyan;
+  background-color: #004c99;
   height: 100vh; }
 
 .flex {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between; }
+  justify-content: flex-start; }
 
 ul {
   margin-top: 10px;
   padding: 0;
   list-style-type: none; }
 
-list div {
-  background-color: white; }
+list {
+  margin: 20px 40px;
+  padding: 20px;
+  background-color: white;
+  border: thin grey solid;
+  border-radius: 5px;
+  height: 300px; }
 
-show div {
-  background-color: white; }
+show, edit {
+  margin: 20px 20px; }
+
+show div, edit div {
+  background-color: white;
+  border-radius: 5px;
+  padding: 20px; }
+
+.value, input, select {
+  float: right; }
+
+.btn {
+  margin-top: 10px; }
 
 /*# sourceMappingURL=style.css.map */
