--- a/app/style.sass
+++ b/app/style.sass
@@ -2,20 +2,41 @@ body
     margin: 0
     padding: 0
 .container
-    background-color: lightcyan
+    background-color: #004c99
     height: 100vh
 
 .flex
     display: flex
     flex-wrap: wrap    
-    justify-content: space-between
+    justify-content:  flex-start
 
 ul
     margin-top: 10px  
     padding: 0
     list-style-type: none   
+ 
+list
+    margin: 20px 40px
+    padding: 20px  
+    background-color: white
+    border: thin grey solid 
+    border-radius: 5px  
+    height: 300px   
 
-list div
-    background-color: white 
-show div
-    background-color: white      
+
+show , edit
+    margin: 20px 20px
+
+
+show div, edit div
+    background-color: white
+    // margin: 20px 40px
+    border-radius: 5px  
+    padding:  20px 
+
+.value , input , select
+    float: right   
+
+.btn 
+    margin-top: 10px     
+    
