--- a/app/style.sass
+++ b/app/style.sass
@@ -28,7 +28,7 @@ show , edit
     margin: 20px 20px
 
 
-show div, edit div
+.inner-div
     background-color: white
     // margin: 20px 40px
     border-radius: 5px  
@@ -38,5 +38,7 @@ show div, edit div
     float: right   
 
 .btn 
-    margin-top: 10px     
-    
+    margin-top: 10px 
+datepicker   
+    float: right
+    width: 162px
